allow-rule.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: sklearn-iris-predictor-allow
  namespace: kubeflow-user-example-com
spec:
  selector:
    matchLabels:
      serving.knative.dev/service: sklearn-iris-predictor
  action: ALLOW
  rules:
  - {}
